macros/tests/entry/fail/duplicate.stderr
error: Duplicate attribute `log`
 --> tests/entry/fail/duplicate.rs:4:25
  |
4 | #[entry(log, delay(69), log, delay(420), crate = "nuefi", crate = "dup")]
  |                         ^^^

error: Duplicate attribute `delay`
 --> tests/entry/fail/duplicate.rs:4:30
  |
4 | #[entry(log, delay(69), log, delay(420), crate = "nuefi", crate = "dup")]
  |                              ^^^^^^^^^^

error: Duplicate attribute `crate`
 --> tests/entry/fail/duplicate.rs:4:59
  |
4 | #[entry(log, delay(69), log, delay(420), crate = "nuefi", crate = "dup")]
  |                                                           ^^^^^^^^^^^^^
